@startuml convert.action

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram imcludes
!include ../../GameCommunication/packages/convert.puml

' class diagram (https://plantuml.com/class-diagram)
$package(plaintext.convert.action) {
    class PositionActionSerializer {
        + serialize(positionAction: positionAction): String
    }
    communication.convert.Serializer <|.. PositionActionSerializer : <<bind>> <T -> PositionAction>

    class GoActionSerializer {
        + serialize(goAction: GoAction): String
    }
    communication.convert.Serializer <|.. GoActionSerializer : <<bind>> <T -> GoAction>

    class KickActionSerializer {
        + serialize(kickAction: KickAction): String
    }
    communication.convert.Serializer <|.. KickActionSerializer : <<bind>> <T -> KickAction>

    class TakeActionSerializer {
        + serialize(takeAction: TakeAction): String
    }
    communication.convert.Serializer <|.. TakeActionSerializer : <<bind>> <T -> TakeAction>

    class PutActionSerializer {
        + serialize(putAction: PutAction): String
    }
    communication.convert.Serializer <|.. PutActionSerializer : <<bind>> <T -> PutAction>

    class FinishActionSerializer {
        + serialize(finishAction: FinishAction): String
    }
    communication.convert.Serializer <|.. FinishActionSerializer : <<bind>> <T -> FinishAction>
}

@enduml
